eliminacion del perfil

--- a/app/src/main/res/menu/menu_usuario.xml
+++ b/app/src/main/res/menu/menu_usuario.xml
@@ -8,4 +8,9 @@
         android:title="Actualizar Perfil"
         />
 
+    <item
+        android:id="@+id/eliminar"
+        android:title="Eliminar Perfil"
+        />
+
 </menu>
