--- a/app/src/main/res/menu/menu_usuario.xml
+++ b/app/src/main/res/menu/menu_usuario.xml
@@ -13,4 +13,9 @@
         android:title="Eliminar Perfil"
         />
 
+    <item
+        android:id="@+id/correoSoporte"
+        android:title="Enviar correo al soporte"
+        />
+
 </menu>
