--- a/app/src/main/res/menu/menu_usuario.xml
+++ b/app/src/main/res/menu/menu_usuario.xml
@@ -18,4 +18,9 @@
         android:title="Enviar correo al soporte"
         />
 
+    <item
+        android:id="@+id/encuestasProgramador"
+        android:title="Enviar sugerencias"
+        />
+
 </menu>
