--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,22 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:padding="20dp"
     android:gravity="center">
-
-
 
     <Button
         android:id="@+id/btnMiPerfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Mi Perfil"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_toStartOf="@+id/btnCerrarSesion"
+        android:hint="Mi Perfil" />
 
     <Button
         android:id="@+id/btnCerrarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Cerrar Sesión"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="5dp"
+        android:hint="Cerrar Sesión" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textTema"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="65dp"
+        android:text="@string/text_info"
+        android:textColor="@color/colorText" />
+
+    <Button
+        android:id="@+id/b_light"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="32dp"
+        android:layout_toStartOf="@+id/b_dark"
+        android:text="Claro" />
+
+    <Button
+        android:id="@+id/b_dark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="20dp"
+        android:text="Obscuro" />
+
+</RelativeLayout>
