--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -27,6 +27,16 @@
         android:layout_marginEnd="5dp"
         android:hint="Cerrar Sesión" />
 
+    <Button
+        android:id="@+id/btnAprender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_toStartOf="@+id/btnMiPerfil"
+        android:hint="Aprender" />
+
     <TextView
         android:id="@+id/textTema"
         android:layout_width="wrap_content"
